--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CodeWars Challenges</title>
+	<title>Day 04 Challenges</title>
 </head>
 <body>
 	
