--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -6,6 +6,14 @@
 	<title>Day 04 Challenges</title>
 </head>
 <body>
-	
+	<h1>Day 04 Challenges</h1>
+	<h2>CodeWars Challenges</h2>
+	<ol>
+		<li><a href="https://www.codewars.com/kata/523b623152af8a30c6000027/train/javascript">Function 2 - squaring an argument</a></li>
+		<li><a href="https://www.codewars.com/kata/55c28f7304e3eaebef0000da/train/javascript">Unfinished Loop - Bug Fixing #1</a></li>
+		<li><a href="https://www.codewars.com/kata/5769b3802ae6f8e4890009d2/train/javascript">Removing Elements</a></li>
+		<li><a href="https://www.codewars.com/kata/55cb632c1a5d7b3ad0000145/train/javascript">Keep up the hoop</a></li>
+		<li><a href="https://www.codewars.com/kata/56cd44e1aa4ac7879200010b/train/javascript">Is the string uppercase?</a></li>
+	</ol>
 </body>
 </html>
