--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -15,5 +15,12 @@
 		<li><a href="https://www.codewars.com/kata/55cb632c1a5d7b3ad0000145/train/javascript">Keep up the hoop</a></li>
 		<li><a href="https://www.codewars.com/kata/56cd44e1aa4ac7879200010b/train/javascript">Is the string uppercase?</a></li>
 	</ol>
+	<h2>TheJsWay - Chapter 6 - Create your first objects</h2>
+	<ol>
+		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#adding-character-experience">Adding character experience</a></li>
+		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-dog">Modeling a dog</a></li>
+		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-circle">Modeling a circle</a></li>
+		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-bank-account">Modeling a bank account</a></li>
+	</ol>
 </body>
 </html>
