rename & linked codewars js file to index.html

--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -22,5 +22,6 @@
 		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-circle">Modeling a circle</a></li>
 		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-bank-account">Modeling a bank account</a></li>
 	</ol>
+	<script src="day004-cw.js"></script>
 </body>
 </html>
