--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -23,5 +23,6 @@
 		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-bank-account">Modeling a bank account</a></li>
 	</ol>
 	<script src="day004-cw.js"></script>
+	<script src="day004-tjsw.js"></script>
 </body>
 </html>
