each day have it own html file

--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -6,23 +6,11 @@
 	<title>Day 04 Challenges</title>
 </head>
 <body>
-	<h1>Day 04 Challenges</h1>
-	<h2>CodeWars Challenges</h2>
-	<ol>
-		<li><a href="https://www.codewars.com/kata/523b623152af8a30c6000027/train/javascript">Function 2 - squaring an argument</a></li>
-		<li><a href="https://www.codewars.com/kata/55c28f7304e3eaebef0000da/train/javascript">Unfinished Loop - Bug Fixing #1</a></li>
-		<li><a href="https://www.codewars.com/kata/5769b3802ae6f8e4890009d2/train/javascript">Removing Elements</a></li>
-		<li><a href="https://www.codewars.com/kata/55cb632c1a5d7b3ad0000145/train/javascript">Keep up the hoop</a></li>
-		<li><a href="https://www.codewars.com/kata/56cd44e1aa4ac7879200010b/train/javascript">Is the string uppercase?</a></li>
-	</ol>
-	<h2>TheJsWay - Chapter 6 - Create your first objects</h2>
-	<ol>
-		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#adding-character-experience">Adding character experience</a></li>
-		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-dog">Modeling a dog</a></li>
-		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-circle">Modeling a circle</a></li>
-		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-bank-account">Modeling a bank account</a></li>
-	</ol>
-	<script src="day004-cw.js"></script>
-	<script src="day004-tjsw.js"></script>
+	<h1>Daily Challenges</h1>
+		<ul>
+			<li><a href="dayv2-000.html">April 9 2022</a></li>
+			<li><a href="dayv2-001.html">April 10 2022</a></li>
+		</ul>
+
 </body>
 </html> 
