add codewars challenges of the day

--- a/8kyu/dayv2-001.html
+++ b/8kyu/dayv2-001.html
@@ -10,7 +10,8 @@
 	<h2>CodeWars Challenges</h2>
 	<ol>
 		<li><a href="https://www.codewars.com/kata/577ff15ad648a14b780000e7/train/javascript">Welcome!</a></li>
-
+		<li><a href="https://www.codewars.com/kata/5ad0d8356165e63c140014d4/train/javascript">Student's Final Grade</a></li>
+		<li><a href="https://www.codewars.com/kata/58cb43f4256836ed95000f97/train/javascript">Difference of Volumes of Cuboids</a></li>
 
 	</ol>
 
