finished 10 codewars challenges

--- a/8kyu/dayv2-001.html
+++ b/8kyu/dayv2-001.html
@@ -12,7 +12,14 @@
 		<li><a href="https://www.codewars.com/kata/577ff15ad648a14b780000e7/train/javascript">Welcome!</a></li>
 		<li><a href="https://www.codewars.com/kata/5ad0d8356165e63c140014d4/train/javascript">Student's Final Grade</a></li>
 		<li><a href="https://www.codewars.com/kata/58cb43f4256836ed95000f97/train/javascript">Difference of Volumes of Cuboids</a></li>
-
+		<li><a href="https://www.codewars.com/kata/577bd026df78c19bca0002c0/train/javascript">Correct the mistakes of the character recognition software
+</a></li>
+		<li><a href="https://www.codewars.com/kata/555a67db74814aa4ee0001b5/train/javascript">Is it even?</a></li>
+		<li><a href="https://www.codewars.com/kata/563a631f7cbbc236cf0000c2/train/javascript">Grasshopper - Terminal game move function</a></li>
+		<li><a href="https://www.codewars.com/kata/5865918c6b569962950002a1/train/javascript">All Star Code Challenge #18</a></li>
+		<li><a href="https://www.codewars.com/kata/53f0f358b9cb376eca001079/train/javascript">Regular Ball Super Ball</a></li>
+		<li><a href="https://www.codewars.com/kata/57f222ce69e09c3630000212/train/javascript">Well of Ideas - Easy Version</a></li>
+		<li><a href="https://www.codewars.com/kata/5625618b1fe21ab49f00001f/train/javascript">Grasshopper - Debug sayHello</a></li>
 	</ol>
 
 	<h3><a href="index.html">Back to Home</a></h3>
