--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -8,8 +8,8 @@
 <body>
 	<h1>Daily Challenges</h1>
 		<ul>
-			<li><a href="dayv2-000.html">April 9 2022</a></li>
-			<li><a href="dayv2-001.html">April 10 2022</a></li>
+			<li><a href="dayv2-000.html">Day000 - April 9 2022</a></li>
+			<li><a href="dayv2-001.html">Day001 - April 10 2022</a></li>
 		</ul>
 
 </body>
