--- a/8kyu/dayv2-002.html
+++ b/8kyu/dayv2-002.html
@@ -9,6 +9,9 @@
 	<h1>Day 02 Challenges - April 11 2022</h1>
 	<h2>CodeWars Challenges</h2>
 	<ol>
+		<li><a href="https://www.codewars.com/kata/56f173a35b91399a05000cb7/train/javascript">Squash the bugs</a></li>
+		<li><a href="https://www.codewars.com/kata/57d814e4950d8489720008db/train/javascript">N-th Power</a></li>
+	</ol>
 		
 	<h3><a href="index.html">Back to Home</a></h3>
 	<script src="dayv2-002.js"></script>
