--- a/8kyu/dayv2-002.html
+++ b/8kyu/dayv2-002.html
@@ -11,6 +11,7 @@
 	<ol>
 		<li><a href="https://www.codewars.com/kata/56f173a35b91399a05000cb7/train/javascript">Squash the bugs</a></li>
 		<li><a href="https://www.codewars.com/kata/57d814e4950d8489720008db/train/javascript">N-th Power</a></li>
+		<li><a href="https://www.codewars.com/kata/57ee4a67108d3fd9eb0000e7/train/javascript">Filter out the geese</a></li>
 	</ol>
 		
 	<h3><a href="index.html">Back to Home</a></h3>
