make each day in seperate folder for organisation

--- a/8kyu/day000/dayv2-000.html
+++ b/8kyu/day000/dayv2-000.html
@@ -23,7 +23,7 @@
 		<li><a href="https://github.com/thejsway/thejsway/blob/master/manuscript/chapter06.md#modeling-a-bank-account">Modeling a bank account</a></li>
 	</ol>
 
-	<h3><a href="index.html">Back to Home</a></h3>
+	<h3><a href="../index.html">Back to Home</a></h3>
 	<script src="day004-cw.js"></script>
 	<script src="day004-tjsw.js"></script>
 </body>
