--- a/8kyu/day001/dayv2-001.html
+++ b/8kyu/day001/dayv2-001.html
@@ -22,7 +22,7 @@
 		<li><a href="https://www.codewars.com/kata/5625618b1fe21ab49f00001f/train/javascript">Grasshopper - Debug sayHello</a></li>
 	</ol>
 
-	<h3><a href="index.html">Back to Home</a></h3>
+	<h3><a href="../index.html">Back to Home</a></h3>
 	<script src="dayv2-001.js"></script>
 </body>
 </html> 
