--- a/8kyu/day002/dayv2-002.html
+++ b/8kyu/day002/dayv2-002.html
@@ -14,7 +14,7 @@
 		<li><a href="https://www.codewars.com/kata/57ee4a67108d3fd9eb0000e7/train/javascript">Filter out the geese</a></li>
 	</ol>
 		
-	<h3><a href="index.html">Back to Home</a></h3>
+	<h3><a href="../index.html">Back to Home</a></h3>
 	<script src="dayv2-002.js"></script>
 </body>
 </html> 
