--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -8,9 +8,9 @@
 <body>
 	<h1>Daily Challenges</h1>
 		<ul>
-			<li><a href="dayv2-000.html">Day000 - April 09 2022</a></li>
-			<li><a href="dayv2-001.html">Day001 - April 10 2022</a></li>
-			<li><a href="dayv2-002.html">Day002 - April 11 2022</a></li>
+			<li><a href="day000/dayv2-000.html">Day000 - April 09 2022</a></li>
+			<li><a href="day001/dayv2-001.html">Day001 - April 10 2022</a></li>
+			<li><a href="day002/dayv2-002.html">Day002 - April 11 2022</a></li>
 
 		</ul>
 
