add projects of the day

--- a/8kyu/day002/dayv2-002.html
+++ b/8kyu/day002/dayv2-002.html
@@ -13,7 +13,11 @@
 		<li><a href="https://www.codewars.com/kata/57d814e4950d8489720008db/train/javascript">N-th Power</a></li>
 		<li><a href="https://www.codewars.com/kata/57ee4a67108d3fd9eb0000e7/train/javascript">Filter out the geese</a></li>
 	</ol>
-		
+	<h2>Building 2 projects</h2>
+	<ol>
+		<li><a href="https://winchy82dev.github.io/ProjectsGA/Project%201-BasicHTML/index.html">Project 1-BasicHTML</a></li>
+		<li><a href="https://winchy82dev.github.io/ProjectsGA/Project%202-Responsive%20Blog%20Theme/index.html">Project 2-Responsive Blog Theme</a></li>
+	</ol>
 	<h3><a href="../index.html">Back to Home</a></h3>
 	<script src="dayv2-002.js"></script>
 </body>
