--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -12,6 +12,7 @@
 			<li><a href="day001/dayv2-001.html">Day001 - April 10 2022</a></li>
 			<li><a href="day002/dayv2-002.html">Day002 - April 11 2022</a></li>
 			<li><a href="day003/day003.html">Day003 - April 12 2022</a></li>
+			<li><a href="day004/day004.html">Day004 - April 13 2022</a></li>
 		</ul>
 
 </body>
