Highest and Lowest

--- a/8kyu/day004/day004.html
+++ b/8kyu/day004/day004.html
@@ -9,7 +9,7 @@
 	<h1>Day 04 Challenges - April 13 2022</h1>
 	<h2>CodeWars Challenges</h2>
 	<ol>
-		<li></li>
+		<li><a href="https://www.codewars.com/kata/554b4ac871d6813a03000035/train/javascript">Highest and Lowest</a></li>
 	</ol>
 		
 	<h3><a href="../index.html">Back to Home</a></h3>
