--- a/8kyu/day004/day004.html
+++ b/8kyu/day004/day004.html
@@ -10,6 +10,7 @@
 	<h2>CodeWars Challenges</h2>
 	<ol>
 		<li><a href="https://www.codewars.com/kata/554b4ac871d6813a03000035/train/javascript">Highest and Lowest</a></li>
+		<li><a href="https://www.codewars.com/kata/56170e844da7c6f647000063/train/javascript">Drink about</a></li>
 	</ol>
 		
 	<h3><a href="../index.html">Back to Home</a></h3>
