--- a/8kyu/day004/day004.html
+++ b/8kyu/day004/day004.html
@@ -11,6 +11,7 @@
 	<ol>
 		<li><a href="https://www.codewars.com/kata/554b4ac871d6813a03000035/train/javascript">Highest and Lowest</a></li>
 		<li><a href="https://www.codewars.com/kata/56170e844da7c6f647000063/train/javascript">Drink about</a></li>
+		<li><a href="https://www.codewars.com/kata/51f9d93b4095e0a7200001b8/train/javascript">How many lightsabers do you own?</a></li>
 	</ol>
 		
 	<h3><a href="../index.html">Back to Home</a></h3>
