Whats the real floor?

--- a/8kyu/day004/day004.html
+++ b/8kyu/day004/day004.html
@@ -13,6 +13,7 @@
 		<li><a href="https://www.codewars.com/kata/56170e844da7c6f647000063/train/javascript">Drink about</a></li>
 		<li><a href="https://www.codewars.com/kata/51f9d93b4095e0a7200001b8/train/javascript">How many lightsabers do you own?</a></li>
 		<li><a href="https://www.codewars.com/kata/57a083a57cb1f31db7000028/train/javascript">Powers of 2</a></li>
+		<li><a href="https://www.codewars.com/kata/574b3b1599d8f897470018f6/train/javascript">What's the real floor?</a></li>
 	</ol>
 		
 	<h3><a href="../index.html">Back to Home</a></h3>
