--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -13,6 +13,8 @@
 			<li><a href="day002/dayv2-002.html">Day002 - April 11 2022</a></li>
 			<li><a href="day003/day003.html">Day003 - April 12 2022</a></li>
 			<li><a href="day004/day004.html">Day004 - April 13 2022</a></li>
+			<li><a href="day005/day005.html">Day005 - April 14 2022</a></li>
+			<li><a href="day006/day006.html">Day006 - April 15 2022</a></li>
 		</ul>
 
 </body>
