add day 5 and 6 progress

--- a/8kyu/day006/day006.html
+++ b/8kyu/day006/day006.html
@@ -12,7 +12,9 @@
     <ol>
         <li><a href="https://www.codewars.com/kata/57a1fd2ce298a731b20006a4">Is it a palindrome?</a></li>
         <li><a href="https://www.codewars.com/kata/55ecd718f46fba02e5000029">What is between?</a></li>
+        <li><a href="https://www.codewars.com/kata/5a2fd38b55519ed98f0000ce/train/javascript">Multiplication table for number</a></li> 
     </ol>
+    <h3><a href="../index.html">Back to Home</a></h3>
     <script src="day006.js"></script>
 </body>
 </html>
