add Day 7 progress

--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Day 04 Challenges</title>
+	<link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
+	<title>#100DaysOfCode Challenges</title>
 </head>
 <body>
 	<h1>Daily Challenges</h1>
@@ -15,6 +16,7 @@
 			<li><a href="day004/day004.html">Day004 - April 13 2022</a></li>
 			<li><a href="day005/day005.html">Day005 - April 14 2022</a></li>
 			<li><a href="day006/day006.html">Day006 - April 15 2022</a></li>
+			<li><a href="day007/day007.html">Day007 - April 16 2022</a></li>
 		</ul>
 
 </body>
