--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -17,6 +17,7 @@
 			<li><a href="day005/day005.html">Day005 - April 14 2022</a></li>
 			<li><a href="day006/day006.html">Day006 - April 15 2022</a></li>
 			<li><a href="day007/day007.html">Day007 - April 16 2022</a></li>
+			<li><a href="day008/day008.html">Day008 - April 17 2022</a></li>
 		</ul>
 
 </body>
